--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
